<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape444"
    android:padding="0dp"
    tools:context=".Fragment444">

    <Button
        android:id="@+id/btnInfo444"
        android:layout_width="61dp"
        android:layout_height="57dp"
        android:background="@drawable/ic_info"
        android:contentDescription="@string/descriptionInfoButton444"
        app:layout_constraintBottom_toTopOf="@+id/lblFragment444"
        app:layout_constraintEnd_toEndOf="@+id/imageView444"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247" />

    <TextView
        android:id="@+id/lblFragment444"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl1Fragment444"
        android:textAlignment="center"
        android:textScaleX="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/imageView444"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="135dp"
        android:background="@drawable/ic_444"
        android:contentDescription="@string/desctiptionIcon444"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>