<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment404"
    android:background="@drawable/shape404"
    android:padding="0dp"
    app:defaultNavHost="true"
    app:navGraph="@navigation/nav_graph" >

    <Button
        android:id="@+id/btnInfo404"
        android:layout_width="61dp"
        android:layout_height="57dp"
        android:background="@drawable/ic_info"
        android:contentDescription="@string/descriptionInfoButton404"
        app:layout_constraintBottom_toTopOf="@+id/lblFragment404"
        app:layout_constraintEnd_toEndOf="@+id/imageView404"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.709" />

    <TextView
        android:id="@+id/lblFragment404"
        android:textScaleX="0.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl1Fragment404"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <ImageView
        android:id="@+id/imageView404"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"
        android:background="@drawable/ic_404"
        android:contentDescription="@string/desctiptionIcon404"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>